test/files/events-exp-lang-neg/parameters-missing.check
parameters-missing.scala:6: error: unexpected expression
  evt e2(x: Int) = e1
                   ^
parameters-missing.scala:8: error: not found: value x
  evt e3(x: Int) = e1(_)
         ^
two errors found
